@@ -12,7 +12,6 @@ This release
 - Text scaling with units needs fixing, especially the depth!
 - Documentation (source)
 - Font specifiable in config.txt
-- Deal with different types of path (not octagonal though...)
 - If datatype not specified, use layer definition for all datatypes
 - Debug/verbose output
 - Exception handling
@@ -21,7 +20,14 @@ This release
 - Compile examples and other files for distribution.
 - Proper command line option parsing
 
-Tasks: 16
+Tasks: 15
+
+Next release
+============
+
+- Support for octagonal paths
+
+Tasks: 1
 
 
 Unlikely
